--- a/index.html
+++ b/index.html
@@ -24,6 +24,274 @@
 
   <main>
 
+    <div class="container d-flex flex-wrap">
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/455.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/755.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/101.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/157.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/163.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/199.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/800.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/954.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/76.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/65.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/544.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/43.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/32.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/967.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/989.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/874.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/255.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/6.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/3.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/2.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/1.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/235.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/767.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/842.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/322.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/111.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/222.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/444.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/875.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/634.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/12.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/832.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+      <div class="camera">
+        <img src="https://boredhumans.b-cdn.net/faces2/65.jpg" alt="Videocamera">
+        <div class="camera-descr">
+          <i class="fa-solid fa-microphone-slash"></i>
+          <span>Pinco Pallo</span>
+        </div>
+      </div>
+
+    </div>
+    
   </main>
 
   <footer>
