[ADD] button template in footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="box">
       <a href="#" class="button">
-        <i class="fa-solid fa-table-cells"></i>
+        <i class="fa-solid fa-grip"></i>
         Speaker View
       </a>
       <a href="#" class="button">
@@ -291,10 +291,45 @@
       </div>
 
     </div>
-    
+
   </main>
 
-  <footer>
+  <footer class="d-flex flex-btw">
+    <!--
+    
+    <i class="fa-solid fa-video"></i>
+    <i class="fa-solid fa-user-plus"></i>
+    <i class="fa-solid fa-user-group"></i>
+    <i class="fa-solid fa-chart-column"></i>
+    <i class="fa-solid fa-share-from-square"></i>
+    <i class="fa-solid fa-comment"></i>
+    <i class="fa-solid fa-record-vinyl"></i>
+    <i class="fa-brands fa-windows"></i>
+    <i class="fa-solid fa-ellipsis"></i>
+    <i class="fa-solid fa-angle-up"></i>
+    -->
+
+    <div class="f-left d-flex">
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-microphone"></i>
+          <p>Mute</p>
+        </a>
+      </div>
+      <div class="button arrow-up">
+        <a href="#">
+          <i class="fa-solid fa-angle-up"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="f-center d-flex">
+
+    </div>
+
+    <div class="f-right d-flex">
+
+    </div>
 
   </footer>
   
