--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <header>
     <div class="box">
-      <a href="#" class="button">
+      <a href="#" class="h-button">
         <i class="fa-solid fa-grip"></i>
         Speaker View
       </a>
-      <a href="#" class="button">
+      <a href="#" class="h-button">
         <i class="fa-solid fa-maximize"></i>
       </a>
     </div>
@@ -295,21 +295,9 @@
   </main>
 
   <footer class="d-flex flex-btw">
-    <!--
-    
-    <i class="fa-solid fa-video"></i>
-    <i class="fa-solid fa-user-plus"></i>
-    <i class="fa-solid fa-user-group"></i>
-    <i class="fa-solid fa-chart-column"></i>
-    <i class="fa-solid fa-share-from-square"></i>
-    <i class="fa-solid fa-comment"></i>
-    <i class="fa-solid fa-record-vinyl"></i>
-    <i class="fa-brands fa-windows"></i>
-    <i class="fa-solid fa-ellipsis"></i>
-    <i class="fa-solid fa-angle-up"></i>
-    -->
 
-    <div class="f-left d-flex">
+    <!-- FOOTER LEFT -->
+    <div class="d-flex">
       <div class="button">
         <a href="#">
           <i class="fa-solid fa-microphone"></i>
@@ -321,14 +309,81 @@
           <i class="fa-solid fa-angle-up"></i>
         </a>
       </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-video"></i>
+          <p>Stop Video</p>
+        </a>
+      </div>
+      <div class="button arrow-up">
+        <a href="#">
+          <i class="fa-solid fa-angle-up"></i>
+        </a>
+      </div>
     </div>
 
-    <div class="f-center d-flex">
-
+    <!-- FOOTER CENTER -->
+    <div class="d-flex">
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-user-plus"></i>
+          <p>Invite</p>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-user-group"></i>
+          <p>Manage Participants</p>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-chart-column"></i>
+          <p>Polling</p>
+        </a>
+      </div>
+      <div class="button active">
+        <a href="#">
+          <i class="fa-solid fa-share-from-square"></i>
+          <p>Share Screen</p>
+        </a>
+      </div>
+      <div class="button arrow-up">
+        <a href="#">
+          <i class="fa-solid fa-angle-up"></i>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-comment"></i>
+          <p>Chat</p>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-record-vinyl"></i>
+          <p>Record</p>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-brands fa-windows"></i>
+          <p>Breakout Rooms</p>
+        </a>
+      </div>
+      <div class="button">
+        <a href="#">
+          <i class="fa-solid fa-ellipsis"></i>
+          <p>More</p>
+        </a>
+      </div>
     </div>
 
-    <div class="f-right d-flex">
-
+    <!-- FOOTER RIGHT -->
+    <div class="d-flex">
+      <div class="text-button active">
+        <a href="#">End meeting</a>
+      </div>
     </div>
 
   </footer>
